# metrics-service

./: .gitignore  README.md  app.py  cdk.json  package-lock.json  package.json  requirements.txt  roboticFundMetrics.py  setup.cfg  setup.py  test.py
data/: AUDUSD_10MIN.csv
lib/: data-management.ts  metrics-service.ts  metrics.ts  trade-execution-stack.ts
resources/: Dockerfile  app.py  app.ts  dockerfile
resources/data-handler/: app.ts
resources/schema/: customerCredentials.ts  tradeBrokerResponse.ts
resources/test/: test_app.py
resources/test/data/: expectedMarketData.py  realIboundEvent.py
resources/utils/: algoClass.py  dbConnect.py  getSecrets.ts  publishEvent.ts
src/: roboticFundMetrics.py
src/roboticFundMetrics/: Algo.py  CI.py  IG.py  TradeEvent.py  dbConnect.py  emitNewTradeEvent.py  getEODAPIKey.py  getLatestPrice.py  marketData.py  roboticFundMetrics.py
src/roboticFundMetrics/utils/: market_id_resolver.py
src/roboticFundMetrics/utils/indicators/: stochastic.py
src/utils/indicators/: aws.py
test/: trade-execution.test.ts
test/data/: expectedMarketData.py  realIboundEvent.py
utils/: publishEvent.py  roboticFundMetrics.py
utils/indicators/: rsi.py  williamsR.py
