[metadata]
name = roboticFundMetrics
version = 0.08+RoboticFundMetrics
author = Roboticfund pty ltd
author_email = support@roboticfund.com.au
description = My package description
long_description = TBC
keywords = one, two
license = None
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    importlib-metadata; python_version<"3.8"


[options.entry_points]
console_scripts =
    executable-name = src.roboticFundMetrics.RoboticFundMetrics


[options.packages.find]
exclude =
    data*