[metadata]
name = roboticFundMetrics
version = 0.25+RoboticFundMetrics
author = Roboticfund pty ltd
author_email = support@roboticfund.com.au
description = My package description
; long_description = My package long description
keywords = one, two
license = None
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    pymysql
    SQLAlchemy
    boto3
    requests

[options.packages.find]
where=src
exclude =
    data*